force-app/main/default/objects/Behavior_Evaluation__c/Behavior_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Behavior Evaluation</label>
    <nameField>
        <displayFormat>{YYYY}/{MM}/{DD}-{0}</displayFormat>
        <label>Behavior Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>