force-app/main/default/objects/Behavior_Evaluation__c/fields/Animal_Age__c.field-meta.xml
<CustomField>
    <fullName>Animal_Age__c</fullName>
    <formula>TEXT( Animal__r.Animal_Age__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Age</label>
    <type>Text</type>
</CustomField>