force-app/main/default/objects/Behavior_Evaluation__c/fields/Animal_Breed__c.field-meta.xml
<CustomField>
    <fullName>Animal_Breed__c</fullName>
    <formula>Animal__r.Breeds_Combined__c</formula>
    <label>Animal Breed</label>
    <type>Text</type>
</CustomField>