force-app/main/default/objects/Behavior_Evaluation__c/fields/Animal_Color__c.field-meta.xml
<CustomField>
    <fullName>Animal_Color__c</fullName>
    <formula>TEXT(Animal__r.Color__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Color</label>
    <type>Text</type>
</CustomField>