force-app/main/default/objects/Behavior_Evaluation__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <formula>Animal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal ID#</label>
    <type>Text</type>
</CustomField>