force-app/main/default/objects/Behavior_Evaluation__c/fields/Animal_Sex__c.field-meta.xml
<CustomField>
    <fullName>Animal_Sex__c</fullName>
    <formula>TEXT(Animal__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Sex</label>
    <type>Text</type>
</CustomField>