force-app/main/default/objects/Behavior_Evaluation__c/fields/Assistant_Initials__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Initials__c</fullName>
    <label>Assistant Initials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>