force-app/main/default/objects/Behavior_Evaluation__c/fields/Behavior_Details__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Details__c</fullName>
    <label>Behavior Details</label>
    <length>7232</length>
    <type>Html</type>
</CustomField>