force-app/main/default/objects/Behavior_Evaluation__c/fields/Behavior_Eval_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Eval_Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behavior Eval Record Type Name</label>
    <type>Text</type>
</CustomField>