force-app/main/default/objects/Behavior_Evaluation__c/fields/Behavior_Evaluation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Evaluation_Summary__c</fullName>
    <label>Behavior Evaluation Summary</label>
    <length>7232</length>
    <type>Html</type>
</CustomField>