force-app/main/default/objects/Behavior_Evaluation__c/fields/Behavior_in_Kennel__c.field-meta.xml
<CustomField>
    <fullName>Behavior_in_Kennel__c</fullName>
    <label>Behavior in Kennel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Not social</fullName>
            </value>
            <value>
                <fullName>Mildly fearful</fullName>
            </value>
            <value>
                <fullName>Excited</fullName>
            </value>
            <value>
                <fullName>Stereotypic behavior</fullName>
            </value>
            <value>
                <fullName>Hyperaroused</fullName>
            </value>
            <value>
                <fullName>Aggressive in cage only</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Threatened</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Moderately Fearful</fullName>
            </value>
            <value>
                <fullName>Did not approach the tester-Moderately fearful</fullName>
                <isActive>false</isActive>
                <label>Did not approach the tester-Moderately fearful</label>
            </value>
            <value>
                <fullName>Threatens</fullName>
                <isActive>false</isActive>
                <label>Threatens</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>