force-app/main/default/objects/Behavior_Evaluation__c/fields/Behavior_on_Leash__c.field-meta.xml
<CustomField>
    <fullName>Behavior_on_Leash__c</fullName>
    <label>Behavior on Leash</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relaxed</fullName>
            </value>
            <value>
                <fullName>Excited</fullName>
            </value>
            <value>
                <fullName>Mildly fearful</fullName>
            </value>
            <value>
                <fullName>Ran or lunged forward-hard to handle</fullName>
            </value>
            <value>
                <fullName>Frenetic movement</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Walked or balked-extremely fearful</fullName>
            </value>
            <value>
                <fullName>Panicked</fullName>
            </value>
            <value>
                <fullName>Showed aggressive behavior</fullName>
            </value>
            <value>
                <fullName>Too fearful-subtest not done</fullName>
            </value>
            <value>
                <fullName>Walks or balks-extremely fearful</fullName>
                <isActive>false</isActive>
                <label>Walks or balks-extremely fearful</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>