force-app/main/default/objects/Behavior_Evaluation__c/fields/Caution__c.field-meta.xml
<CustomField>
    <fullName>Caution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caution for Live Dog Testing</label>
    <type>Checkbox</type>
</CustomField>