force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_BIK__c.field-meta.xml
<CustomField>
    <fullName>Comments_BIK__c</fullName>
    <label>Comments BIK</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>