force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_BOL__c.field-meta.xml
<CustomField>
    <fullName>Comments_BOL__c</fullName>
    <label>Comments BOL</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>