force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_FD__c.field-meta.xml
<CustomField>
    <fullName>Comments_FD__c</fullName>
    <label>Comments FD</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>