force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_OSD_P1__c.field-meta.xml
<CustomField>
    <fullName>Comments_OSD_P1__c</fullName>
    <label>Comments OSD P1</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>