force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_OSD_P2__c.field-meta.xml
<CustomField>
    <fullName>Comments_OSD_P2__c</fullName>
    <label>Comments OSD P2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>