force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_Pleasant_Touch__c.field-meta.xml
<CustomField>
    <fullName>Comments_Pleasant_Touch__c</fullName>
    <label>Comments Pleasant Touch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>