force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_PPT__c.field-meta.xml
<CustomField>
    <fullName>Comments_PPT__c</fullName>
    <label>Comments PPT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>