force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_PR__c.field-meta.xml
<CustomField>
    <fullName>Comments_PR__c</fullName>
    <label>Comments PR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>