force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_SSD_P1__c.field-meta.xml
<CustomField>
    <fullName>Comments_SSD_P1__c</fullName>
    <label>Comments SSD P1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>