force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_Tag__c.field-meta.xml
<CustomField>
    <fullName>Comments_Tag__c</fullName>
    <label>Comments Tag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>