force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_TD_P2__c.field-meta.xml
<CustomField>
    <fullName>Comments_TD_P2__c</fullName>
    <label>Comments TD P2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>