force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_UT_1st__c.field-meta.xml
<CustomField>
    <fullName>Comments_UT_1st__c</fullName>
    <label>Comments UT 1st</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>