force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_UT_2nd__c.field-meta.xml
<CustomField>
    <fullName>Comments_UT_2nd__c</fullName>
    <label>Comments UT 2nd</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>