force-app/main/default/objects/Behavior_Evaluation__c/fields/Comments_UT__c.field-meta.xml
<CustomField>
    <fullName>Comments_UT__c</fullName>
    <label>Comments UT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>