force-app/main/default/objects/Behavior_Evaluation__c/fields/Dog_Dog_Testing_Date__c.field-meta.xml
<CustomField>
    <fullName>Dog_Dog_Testing_Date__c</fullName>
    <label>Dog/Dog Testing Date</label>
    <type>Date</type>
</CustomField>