force-app/main/default/objects/Behavior_Evaluation__c/fields/Dog_Dog_Testing_Done__c.field-meta.xml
<CustomField>
    <fullName>Dog_Dog_Testing_Done__c</fullName>
    <formula>IF(
(IF(ISBLANK(Same_Sex_P1__c),0,1) + 
IF(ISBLANK(Same_Sex_P2__c),0,1) + 
IF(ISBLANK(Same_Sex_P3__c),0,1) + 
IF(ISBLANK(Opposite_Sex_P1__c),0,1) + 
IF(ISBLANK(Opposite_Sex_P2__c),0,1) + 
IF(ISBLANK(Opposite_Sex_P3__c),0,1))&gt;0,TRUE,FALSE)</formula>
    <label>Dog/Dog Testing Done</label>
    <type>Checkbox</type>
</CustomField>