force-app/main/default/objects/Behavior_Evaluation__c/fields/Dog_Dog_Testing_Needed__c.field-meta.xml
<CustomField>
    <fullName>Dog_Dog_Testing_Needed__c</fullName>
    <formula>IF(
(IF(TEXT(Evaluation_Subtype__c)=&apos;Puppy&apos;,0,1)) + 
(IF(TEXT(Evaluation_Subtype__c)=&apos;Dog Fighting&apos;,1,0)) + 
(IF(TEXT(Evaluation_Subtype__c)=&apos;Adult Animal&apos;,1,0)) + 
(IF(TEXT(Evaluation_Subtype__c)=&apos;Dog/Dog Only&apos;,1,0))
&gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dog/Dog Testing Needed</label>
    <type>Checkbox</type>
</CustomField>