force-app/main/default/objects/Behavior_Evaluation__c/fields/Dogs_that_need_a_Dog_Dog_Test__c.field-meta.xml
<CustomField>
    <fullName>Dogs_that_need_a_Dog_Dog_Test__c</fullName>
    <formula>IF(AND(TEXT(Overall_Evaluation_Grade__c)=&apos;D - Dog Aggression&apos;, Caution__c = True), True, IF(AND(TEXT(Overall_Evaluation_Grade__c)=&apos;D - Dog Aggression&apos;, Caution__c = False), False, True))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dogs that need a Dog /Dog Test</label>
    <type>Checkbox</type>
</CustomField>