force-app/main/default/objects/Behavior_Evaluation__c/fields/Evaluation_Behavior_Summary__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Behavior_Summary__c</fullName>
    <label>Evaluation Behavior Summary</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>