force-app/main/default/objects/Behavior_Evaluation__c/fields/Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>