force-app/main/default/objects/Behavior_Evaluation__c/fields/Evaluation_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Subtype__c</fullName>
    <label>Evaluations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puppy</fullName>
            </value>
            <value>
                <fullName>Dog Fighting</fullName>
            </value>
            <value>
                <fullName>Adult Animal</fullName>
            </value>
            <value>
                <fullName>Fighting Dog Case</fullName>
                <isActive>false</isActive>
                <label>Fighting Dog Case</label>
            </value>
            <value>
                <fullName>Play Test P1</fullName>
                <isActive>false</isActive>
                <label>Play Test P1</label>
            </value>
            <value>
                <fullName>Play Test P2</fullName>
                <isActive>false</isActive>
                <label>Play Test P2</label>
            </value>
            <value>
                <fullName>Pleasant Touch Test</fullName>
                <isActive>false</isActive>
                <label>Pleasant Touch Test</label>
            </value>
            <value>
                <fullName>Social Test P1</fullName>
                <isActive>false</isActive>
                <label>Social Test P1</label>
            </value>
            <value>
                <fullName>Social Test P2</fullName>
                <isActive>false</isActive>
                <label>Social Test P2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>