force-app/main/default/objects/Behavior_Evaluation__c/fields/Facility_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Facility_Outcome__c</fullName>
    <formula>TEXT(Animal__r.Shelter_Location2__c)</formula>
    <label>Facility/Outcome</label>
    <type>Text</type>
</CustomField>