force-app/main/default/objects/Behavior_Evaluation__c/fields/Fake_Dog__c.field-meta.xml
<CustomField>
    <fullName>Fake_Dog__c</fullName>
    <label>Fake Dog</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greeted-friendly</fullName>
            </value>
            <value>
                <fullName>Greeted-submissive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Greeted-sexual behavior</fullName>
            </value>
            <value>
                <fullName>Nervous/fearful</fullName>
            </value>
            <value>
                <fullName>Defensive</fullName>
            </value>
            <value>
                <fullName>Predatory-not aggressive</fullName>
            </value>
            <value>
                <fullName>Pushy-not aggressive</fullName>
            </value>
            <value>
                <fullName>Pushy-aggressive</fullName>
            </value>
            <value>
                <fullName>Predatory-aggressive</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Investigated-not fooled</fullName>
            </value>
            <value>
                <fullName>Playful</fullName>
            </value>
            <value>
                <fullName>Neutral, nervous/fearful or friendly-then aggressive</fullName>
            </value>
            <value>
                <fullName>Charged-aggressive</fullName>
            </value>
            <value>
                <fullName>Charges-aggressive</fullName>
                <isActive>false</isActive>
                <label>Charges-aggressive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>