force-app/main/default/objects/Behavior_Evaluation__c/fields/Grade_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Grade_Change_Reason__c</fullName>
    <description>This is required field when Overall Evaluation Grade field is modified on the behavior eval.</description>
    <label>Grade Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>