force-app/main/default/objects/Behavior_Evaluation__c/fields/Handler_Initials__c.field-meta.xml
<CustomField>
    <fullName>Handler_Initials__c</fullName>
    <label>Handler Name</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>