force-app/main/default/objects/Behavior_Evaluation__c/fields/Is_Muzzled__c.field-meta.xml
<CustomField>
    <fullName>Is_Muzzled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muzzled</label>
    <type>Checkbox</type>
</CustomField>