force-app/main/default/objects/Behavior_Evaluation__c/fields/Is_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Is_Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if that Evaluation was Skipped or Not</description>
    <label>Skipped</label>
    <type>Checkbox</type>
</CustomField>