force-app/main/default/objects/Behavior_Evaluation__c/fields/Muzzled_PDI_P1__c.field-meta.xml
<CustomField>
    <fullName>Muzzled_PDI_P1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muzzled PDI P1</label>
    <type>Checkbox</type>
</CustomField>