force-app/main/default/objects/Behavior_Evaluation__c/fields/Muzzled_PDI_P2__c.field-meta.xml
<CustomField>
    <fullName>Muzzled_PDI_P2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muzzled PDI P2</label>
    <type>Checkbox</type>
</CustomField>