force-app/main/default/objects/Behavior_Evaluation__c/fields/Muzzled_SSD_P3__c.field-meta.xml
<CustomField>
    <fullName>Muzzled_SSD_P3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muzzled  SSD P3</label>
    <type>Checkbox</type>
</CustomField>