force-app/main/default/objects/Behavior_Evaluation__c/fields/Opposite_Sex_P2__c.field-meta.xml
<CustomField>
    <fullName>Opposite_Sex_P2__c</fullName>
    <label>Opposite-Sex P2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friendly</fullName>
            </value>
            <value>
                <fullName>Submissive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Nervous/fearful</fullName>
            </value>
            <value>
                <fullName>Tense/assertive</fullName>
            </value>
            <value>
                <fullName>Very intense/aroused</fullName>
            </value>
            <value>
                <fullName>Predatory</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>