force-app/main/default/objects/Behavior_Evaluation__c/fields/Overall_Evaluation_Grade__c.field-meta.xml
<CustomField>
    <fullName>Overall_Evaluation_Grade__c</fullName>
    <label>Overall Evaluation Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - No Concerns</fullName>
            </value>
            <value>
                <fullName>B - Mild Concern(s)</fullName>
            </value>
            <value>
                <fullName>C - Moderate Concern(s)</fullName>
            </value>
            <value>
                <fullName>D - Severe Concern(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>