force-app/main/default/objects/Behavior_Evaluation__c/fields/Play_Test_P1__c.field-meta.xml
<CustomField>
    <fullName>Play_Test_P1__c</fullName>
    <label>Play Test P1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Play_Test_P1</valueSetName>
    </valueSet>
</CustomField>