force-app/main/default/objects/Behavior_Evaluation__c/fields/Play_Test_P2__c.field-meta.xml
<CustomField>
    <fullName>Play_Test_P2__c</fullName>
    <label>Play Test P2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Play_Test_P2</valueSetName>
    </valueSet>
</CustomField>