force-app/main/default/objects/Behavior_Evaluation__c/fields/Play_Test_Tug_P1__c.field-meta.xml
<CustomField>
    <fullName>Play_Test_Tug_P1__c</fullName>
    <label>Play Test Tug P1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Played with toy and/or tester</fullName>
            </value>
            <value>
                <fullName>Curious but not playful</fullName>
            </value>
            <value>
                <fullName>Sought interaction with tester</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Highly aroused</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>