force-app/main/default/objects/Behavior_Evaluation__c/fields/Play_Test_Tug_P2__c.field-meta.xml
<CustomField>
    <fullName>Play_Test_Tug_P2__c</fullName>
    <label>Play Test Tug P2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Played with toy alone</fullName>
            </value>
            <value>
                <fullName>Interacted with tester</fullName>
            </value>
            <value>
                <fullName>Investigated toy</fullName>
            </value>
            <value>
                <fullName>Ignored toy</fullName>
            </value>
            <value>
                <fullName>Tried to keep toy from tester</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Refused to relinquish toy-stiff</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Guarded toy</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>