force-app/main/default/objects/Behavior_Evaluation__c/fields/Pleasant_Touch__c.field-meta.xml
<CustomField>
    <fullName>Pleasant_Touch__c</fullName>
    <label>Pleasant Touch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enjoyed contact-sought it out</fullName>
            </value>
            <value>
                <fullName>Accepted contact-relaxed</fullName>
            </value>
            <value>
                <fullName>Tolerated handling—not relaxed</fullName>
            </value>
            <value>
                <fullName>Oriented to tester&apos;s hand-mouthy</fullName>
            </value>
            <value>
                <fullName>Moderately fearful</fullName>
            </value>
            <value>
                <fullName>Unruly</fullName>
            </value>
            <value>
                <fullName>Tense</fullName>
            </value>
            <value>
                <fullName>Extremely fearful</fullName>
            </value>
            <value>
                <fullName>Became aggressive</fullName>
            </value>
            <value>
                <fullName>Tolerated handling-not relaxed</fullName>
                <isActive>false</isActive>
                <label>Tolerated handling-not relaxed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>