force-app/main/default/objects/Behavior_Evaluation__c/fields/Pleasant_Touch_Test__c.field-meta.xml
<CustomField>
    <fullName>Pleasant_Touch_Test__c</fullName>
    <label>Pleasant Touch Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pleasant_Touch_Test</valueSetName>
    </valueSet>
</CustomField>