force-app/main/default/objects/Behavior_Evaluation__c/fields/Potential_Beh_Iss_Other__c.field-meta.xml
<CustomField>
    <fullName>Potential_Beh_Iss_Other__c</fullName>
    <label>Potential Beh Iss Other</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>